--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .app-name {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 750;
   color: #43a047; /* Green color for title */
 }
@@ -107,23 +107,34 @@ button:active {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2); /* Inset shadow for pressed effect */
 }
 
+.button-group {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px; /* Add space between the buttons */
+}
+
+.button-group button {
+  flex: 1; /* Ensure both buttons take equal width */
+}
+
 
 /* Status */
 #status {
-  font-size: 1.1rem; /* Increased status text size */
+  font-size: 1.5rem; /* Increased status text size */
   font-weight: 700; /* Bolder weight for emphasis */
   color: #333;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 /* Exercise Progress */
 #exerciseProgress {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   font-weight: 700; /* Bolder weight for emphasis */
   color: #555;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
+  min-height: 23px; /* Ensures consistent space even when empty */
 }
 
 /* Progress Bar */
@@ -248,17 +259,16 @@ input:checked + .slider:before {
 .progress-ring__background {
   fill: none;
   stroke: #e0e0e0; /* Light gray background */
-  stroke-width: 8;
+  stroke-width: 12;
 }
 
 .progress-ring__circle {
   fill: none;
   stroke: #43a047; /* Green stroke for progress */
-  stroke-width: 8;
+  stroke-width: 12; /* Set stroke width to 12 */
   stroke-linecap: round; /* Rounded edges for progress */
-  stroke-dasharray: 339.292; /* Circumference of the circle */
-  stroke-dashoffset: 339.292; /* Hidden at the start */
-  /* transition: stroke-dashoffset 0.3s linear; */
+  stroke-dasharray: 565.48; /* Adjust to match the radius (if necessary) */
+  stroke-dashoffset: 565.48; /* Start fully hidden */
 }
 
 .progress-ring__text {
