--- a/views/offscreen.html
+++ b/views/offscreen.html
@@ -5,6 +5,6 @@
   <title>Offscreen Audio</title>
 </head>
 <body>
-  <script src="offscreen.js"></script>
+  <script src="../js/offscreen.js"></script>
 </body>
 </html>
