--- a/views/popup.html
+++ b/views/popup.html
@@ -141,7 +141,7 @@
     </section>
   </div>
 
-  <script type="module" src="../js/popup.js"></script>
+  <script type="module" src="../js/popup/popup.js"></script>
 
 </body>
 </html>
